# procthor

./: .gitignore  AGENTS.md  hallway_houses.json  pyproject.toml  temp.json  test_ratio_scaling.py  test_results.json
procthor/generation/: __init__.py  agent.py  connectivity.py  doors.py  exterior_walls.py  floorplan_generation.py  generation.py  hallway_room_specs.py  house.py  objects.py  progressive_floorplan_generation.py  protocols.py  room_proportions.py  room_sizing.py  room_specs.py  small_objects.py  treemap.py  validation.py  wall_objects.py
procthor/utils/: types.py
scripts/: debug_4br.py  diagnose_adjacency.py  diagnose_navigability.py  generate_1k_with_hallways.py  generate_dataset.py  generate_samples.py  save_hallway_dataset.py  show_saved_houses.py  split_dataset.py  test_hallway_features.py  test_proportions.py  visualize_house.py
